# llvm

docs/: LangRef.rst
include/llvm/: InitializePasses.h
lib/Analysis/: CMakeLists.txt  PtrUseVisitor.cpp  TargetTransformInfo.cpp  ValueTracking.cpp
lib/AsmParser/: LLParser.cpp  LLParser.h
lib/CodeGen/: AtomicExpandPass.cpp  CodeGenPrepare.cpp  SafeStack.cpp  ShadowStackGCLowering.cpp  SjLjEHPrepare.cpp  StackProtector.cpp  WinEHPrepare.cpp
lib/IR/: AsmWriter.cpp  AutoUpgrade.cpp  Core.cpp  DIBuilder.cpp  DataLayout.cpp  (+5 more)
lib/Transforms/: CMakeLists.txt
lib/Transforms/Coroutines/: CoroElide.cpp  CoroSplit.cpp
lib/Transforms/EraseNonkernel/: EraseNonkernel.cpp
lib/Transforms/HC/: CMakeLists.txt
lib/Transforms/HC/DirectFuncCall/: DirectFuncCall.cpp
lib/Transforms/HC/SelectAcceleratorCode/: SelectAcceleratorCode.cpp
lib/Transforms/HC/WrapperGen/: WrapperGen.cpp
lib/Transforms/IPO/: ArgumentPromotion.cpp  DeadArgumentElimination.cpp  FunctionImport.cpp  GlobalOpt.cpp  Inliner.cpp  PassManagerBuilder.cpp
lib/Transforms/InstCombine/: InstCombineCasts.cpp  InstCombineLoadStoreAlloca.cpp
lib/Transforms/Instrumentation/: AddressSanitizer.cpp  DataFlowSanitizer.cpp  MemorySanitizer.cpp
lib/Transforms/Promote/: Promote.cpp
lib/Transforms/Scalar/: CMakeLists.txt  DeadStoreElimination.cpp  GVN.cpp  InferAddressSpaces.cpp  LowerAlloca.cpp  RewriteStatepointsForGC.cpp  SROA.cpp  Scalar.cpp
lib/Transforms/Utils/: CodeExtractor.cpp  DemoteRegToStack.cpp  FunctionImportUtils.cpp  InlineFunction.cpp  SplitModule.cpp
utils/: update_llc_test_checks.py
(+78 files in other folders)
