add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(Promote)
add_subdirectory(EraseNonkernel)
add_subdirectory(CpuRename)
add_subdirectory(HC)
add_subdirectory(RemoveSpecialSection)
